lab4/mongo-stf.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-db
spec:
  serviceName: mongo-service
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  # template
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      # container
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: pv-backend
          mountPath: /data/pv-backend/
      # init container
  volumeClaimTemplates:
  - metadata:
      name: pv-backend
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 500Mi

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
